compilateurDeca/src/test/deca/codegen/valid/avec_objet/axe1/redefinition.deca
// Description:
//    Test de redéfinition : la méthode de la sous-classe doit masquer celle de la mère
//
// Resultats:
//    Je suis B
// 
// Historique:
//    cree le 14/01/2026

class A {
    void identifier() {
        println("Je suis A");
    }
}

class B extends A {
    void identifier() {
        println("Je suis B");
    }
}

{
    B b = new B();
    b.identifier();
}

